# smart-enterprise-ai-copilot

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  __init__.py  consolidate_project_files.py  create_project_structure.py  pyproject.toml
.github/: settings.yml
.github/workflows/: ci-pipeline.yml  sync-settings.yml
config/: __init__.py
smart_enterprise_ai_copilot/api/: __init__.py  main.py
smart_enterprise_ai_copilot/api/middleware/: exception_handler.py
smart_enterprise_ai_copilot/api/routes/: health.py
smart_enterprise_ai_copilot/config/: __init__.py  settings.py
smart_enterprise_ai_copilot/data/: __init__.py
smart_enterprise_ai_copilot/docs/: __init__.py
smart_enterprise_ai_copilot/docs/poetry_usage/: overview.md
smart_enterprise_ai_copilot/graph/nodes/: __init__.py
smart_enterprise_ai_copilot/llm/: __init__.py
smart_enterprise_ai_copilot/memory/: __init__.py
smart_enterprise_ai_copilot/state/: __init__.py
smart_enterprise_ai_copilot/tests/: test_health.py
smart_enterprise_ai_copilot/utils/: logger.py
tools/: __init__.py
