[tool.poetry]
name = "smart-enterprise-ai-copilot"
version = "0.1.0"
description = "Modular AI agent system for enterprise workflows"
authors = ["Ish Mishra <ish@example.com>"]
packages = [{ include = "smart_enterprise_ai_copilot" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
python-dotenv = ">=1.1.0,<2.0.0"
loguru = ">=0.7.3,<1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"
mypy = "^1.16.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"